Added mobile menu and fixed is-visible bug, still need to fix scrolling bug from bottom to top@

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,6 +3,10 @@
 .header {
     min-height: 80vh;
 
+    @include respond(phone) {
+        min-height: 90vh;
+    }
+
     &__text-box {
         @include respond(tab-port) {
             position: relative;
