--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -15,11 +15,21 @@
     <div class="logo">
         <a href="#">Serena Chan</a>
     </div>
-    <div class="mobile_menu">
-        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
-        <label for="navi-toggle" class="navigation__button">
-            <span class="navigation__icon">&nbsp;</span>
-        </label>
+    <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+    <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+    </label>
+    <div class="navigation__background">&nbsp;</div>
+    <div class="navigation__mobile--nav">
+        <div><a href="#"><span class="navigation__mobile--menu"><span
+                        class="navigation__mobile--arrow">&#8594;</span>Art</span></a>
+        </div>
+        <div><a href="#"><span class="navigation__mobile--menu"><span
+                        class="navigation__mobile--arrow">&#8594;</span>Work</span></a>
+        </div>
+        <div><a href="#"><span class="navigation__mobile--menu"><span
+                        class="navigation__mobile--arrow">&#8594;</span>Contact</span></a>
+        </div>
     </div>
 </div>
 <!-- The routed views render in the <router-outlet>-->
