--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,6 +1,21 @@
 @import '../shared/abstracts/variables';
 @import '../shared/abstracts/mixins';
 
+.navigation__background {
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    background-color: $color-background;
+    z-index: 100;
+    transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
+    position: fixed;
+    right: 5rem;
+}
+
+.navigation__checkbox:checked~.navigation__background {
+    transform: scale(80);
+}
+
 .navigation {
     backface-visibility: hidden;
     min-height: 15vh;
@@ -9,29 +24,23 @@
         background-color: #feffff;
         height: 7rem;
         width: 7rem;
-        /* position: fixed; */
-        /* top: 6rem; */
-        float: right;
-        /* top: 3rem; */
-        /* right: 6rem; */
         border-radius: 50%;
-        /* z-index: 2000; */
+        z-index: 1000;
         box-shadow: 0 1rem 3rem rgba(25, 25, 25, 0.1);
         text-align: center;
         cursor: pointer;
+        position: fixed;
+        right: 5rem;
     }
 
     &__checkbox {
         display: none;
     }
 
-    &__checkbox:checked~&__background {
-        transform: scale(80);
-    }
 
-    &__checkbox:checked~&__nav {
-        opacity: 1;
-        width: 100%;
+    &__checkbox:checked~&__mobile--nav {
+        //TODO: stagger animation
+        display: block;
     }
 
     &__checkbox:checked+&__button &__icon {
@@ -48,12 +57,73 @@
         transform: rotate(-135deg);
     }
 
+    &__icon {
+        position: relative;
+        margin-top: 3.5rem;
+
+        &,
+        &::before,
+        &::after {
+            width: 3rem;
+            height: 2px;
+            background-color: $color-background;
+            display: inline-block;
+        }
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            transition: all .2s;
+        }
+
+        &::before {
+            top: -.8rem;
+        }
+
+        &::after {
+            top: .8rem;
+        }
+    }
+
     &__button:hover &__icon::before {
         top: -1rem;
     }
 
     &__button:hover &__icon::after {
         top: 1rem;
+    }
+
+    &__mobile--nav {
+        position: fixed;
+        top: 10rem;
+        left: 0;
+        z-index: 200;
+        display: none;
+        transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    }
+
+    &__mobile--nav div {
+        font-size: 4rem;
+        padding: 4rem;
+        color: white;
+    }
+
+    &__mobile--nav a {
+        text-decoration: none;
+        color: $color-text;
+    }
+
+    &__mobile--menu {
+        background-color: $color-secondary-highlight;
+        padding: 1rem;
+        border: 2px solid #c930c7;
+        border-radius: 5px;
+    }
+
+    &__mobile--arrow {
+        margin: 2rem;
     }
 
     &__list {
@@ -145,6 +215,7 @@
     .logo {
         @include respond(phone) {
             float: left;
+            margin-top: 2rem;
         }
 
         float: right;
