--- a/src/app/section-experience/section-experience.component.html
+++ b/src/app/section-experience/section-experience.component.html
@@ -22,36 +22,46 @@
             </div>
             <div class="tree__branch--vertical"></div>
             <div class="tree__branch--horizontal">
-                <span class="tree__text tree__text--selectable" id="sky">Sky</span><br/>
+                <span class="tree__text tree__text--selectable" id="sky">Sky</span><br />
             </div>
         </div>
         <div class="work-experience show-on-scroll2">
             <div class="work-experience--child fx" style="visibility: visible;">
-                <div class="work-experience--title heading-tertiary">CitVelocity FX Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
+                <div class="work-experience--title heading-tertiary">
+                    CitVelocity FX Software
+                    <span class="work-experience--mobilesecondtitle">Engineer<span class="heading-primary--main1">
+                            @Citi</span></span>
+                </div>
                 <div class="work-experience--details">
                     <div class="work-experience--timeframe heading-quarternary">Oct 2018 - Aug 2019, Present</div>
                     <div class="heading-quarternary">
                         <ul>
-                            <li>Contribute to developing the front end of rate grid and order uploads with Angular + TypeScript</li>
-                            <li>Contributed to developing the real money blotter, allowing salespeople to modify the spread of each trade and cover risk</li>
+                            <li>Contribute to developing the front end of rate grid and order uploads with Angular +
+                                TypeScript</li>
+                            <li>Contributed to developing the real money blotter, allowing salespeople to modify the
+                                spread of each trade and cover risk</li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="work-experience--child commodities" style="visibility: hidden;">
-                <div class="heading-tertiary">Commodities eTrading Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
+                <div class="heading-tertiary">Commodities eTrading Software Engineer <span
+                        class="heading-primary--main1">@ Citi</span></div>
                 <div class="work-experience--details">
                     <div class="work-experience--timeframe heading-quarternary">Aug 2019 - Present</div>
                     <div class="heading-quarternary">
                         <ul>
-                            <li>Contribute in developing the back end of a high performance LTA eTrading platform with python</li>
-                            <li>Developed the backtest / regression test for the eTrading pricing platform to ensure that changes made to the codebase will still price with the expected tick</li>
+                            <li>Contribute in developing the back end of a high performance LTA eTrading platform with
+                                python</li>
+                            <li>Developed the backtest / regression test for the eTrading pricing platform to ensure
+                                that changes made to the codebase will still price with the expected tick</li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="work-experience--child sky" style="visibility: hidden;">
-                <div class="heading-tertiary">Summer Software Developer Intern <span class="heading-primary--main1">@ Sky</span></div>
+                <div class="heading-tertiary">Summer Software Developer Intern <span class="heading-primary--main1">@
+                        Sky</span></div>
                 <div class="work-experience--details">
                     <div class="work-experience--timeframe heading-quarternary">Jul 2019 - Oct 2019</div>
                     <div class="heading-quarternary">
