Fix typewriter animation for mobile

--- a/src/app/section-experience/section-experience.component.html
+++ b/src/app/section-experience/section-experience.component.html
@@ -28,9 +28,9 @@
         <div class="work-experience show-on-scroll2">
             <div class="work-experience--child fx" style="visibility: visible;">
                 <div class="work-experience--title heading-tertiary">
-                    CitVelocity FX Software
-                    <span class="work-experience--mobilesecondtitle">Engineer<span class="heading-primary--main1">
-                            @Citi</span></span>
+                    <div class="work-experience--mobilefirsttitle">CitVelocity FX Software</div>
+                    <div class="work-experience--mobilesecondtitle">Engineer<span class="heading-primary--main1">
+                            @Citi</span></div>
                 </div>
                 <div class="work-experience--details">
                     <div class="work-experience--timeframe heading-quarternary">Oct 2018 - Aug 2019, Present</div>
@@ -45,8 +45,10 @@
                 </div>
             </div>
             <div class="work-experience--child commodities" style="visibility: hidden;">
-                <div class="heading-tertiary">Commodities eTrading Software Engineer <span
-                        class="heading-primary--main1">@ Citi</span></div>
+                <div class="heading-tertiary">
+                    <div class="work-experience--mobilefirsttitle">Commodities eTrading</div>
+                    <div class="work-experience--mobilesecondtitle">Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
+                </div>
                 <div class="work-experience--details">
                     <div class="work-experience--timeframe heading-quarternary">Aug 2019 - Present</div>
                     <div class="heading-quarternary">
@@ -60,8 +62,10 @@
                 </div>
             </div>
             <div class="work-experience--child sky" style="visibility: hidden;">
-                <div class="heading-tertiary">Summer Software Developer Intern <span class="heading-primary--main1">@
-                        Sky</span></div>
+                <div class="heading-tertiary">
+                    <div class="work-experience--mobilefirsttitle">Software Developer</div>
+                    <div class="work-experience--mobilesecondtitle"> Intern <span class="heading-primary--main1">@ Sky</span></div>
+                </div>
                 <div class="work-experience--details">
                     <div class="work-experience--timeframe heading-quarternary">Jul 2019 - Oct 2019</div>
                     <div class="heading-quarternary">
