--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,17 +1,6 @@
 @import '../shared/abstracts/variables';
 @import '../shared/abstracts/mixins';
 
-.navigation__background {
-    height: 6rem;
-    width: 6rem;
-    border-radius: 50%;
-    background-color: $color-background;
-    z-index: 100;
-    transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
-    position: fixed;
-    right: 5rem;
-}
-
 .navigation__checkbox:checked~.navigation__background {
     transform: scale(80);
 }
@@ -20,18 +9,38 @@
     backface-visibility: hidden;
     min-height: 15vh;
 
-    &__button {
-        background-color: #feffff;
-        height: 7rem;
-        width: 7rem;
-        border-radius: 50%;
-        z-index: 1000;
-        box-shadow: 0 1rem 3rem rgba(25, 25, 25, 0.1);
-        text-align: center;
-        cursor: pointer;
-        position: fixed;
-        right: 5rem;
+    &__button, &__background{
+        visibility: hidden;
     }
+
+    @include respond(phone) {
+        &__button {
+            visibility: visible;
+            background-color: #feffff;
+            height: 7rem;
+            width: 7rem;
+            border-radius: 50%;
+            z-index: 1000;
+            box-shadow: 0 1rem 3rem rgba(25, 25, 25, 0.1);
+            text-align: center;
+            cursor: pointer;
+            position: fixed;
+            right: 5rem;
+        }
+
+        &__background {
+            visibility: visible;
+            height: 6rem;
+            width: 6rem;
+            border-radius: 50%;
+            background-color: $color-background;
+            z-index: 100;
+            transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
+            position: fixed;
+            right: 5rem;
+        }
+    }
+    
 
     &__checkbox {
         display: none;
