--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -3,3 +3,4 @@
   <app-section-experience></app-section-experience>
   <app-section-side-projects></app-section-side-projects>
 </main>
+<!-- <div>Linkedin icon made by <a href="https://www.flaticon.com/authors/freepik" style="text-decoration: none">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
