Updated work experience section and fixed citi click bug

--- a/src/app/section-experience/section-experience.component.html
+++ b/src/app/section-experience/section-experience.component.html
@@ -33,13 +33,27 @@
                             @ Citi</span></div>
                 </div>
                 <div class="work-experience--details">
-                    <div class="work-experience--timeframe heading-quarternary">Oct 2018 - Aug 2019, Present</div>
+                    <div class="work-experience--timeframe heading-quarternary">Jul 2020 - Present</div>
                     <div class="heading-quarternary">
                         <ul>
-                            <li>Contribute to developing the front end of rate grid and order uploads with Angular +
-                                TypeScript</li>
-                            <li>Contributed to developing the real money blotter, allowing salespeople to modify the
-                                spread of each trade and cover risk</li>
+                            <li>Contributed to the development of Citi Velocity, a market
+                                leading single dealer trading platform. Developed in Angular,
+                                TypeScript/HTML/Sass, interacted with the business team to
+                                clarify requirements, and worked closely with a large team of
+                                developers across different timezones.</li>
+                            <li>Successfully lead the development and migration to a new
+                                CI/CD pipeline (Docker, Jenkins, Openshift, uDeploy) for the
+                                project, liasing with QA and build teams as well as the wider
+                                DevOps community in Citi.</li>
+                        </ul>
+                        <div class="work-experience--timeframe heading-quarternary">Aug 2018 - Aug 2019</div>
+                        <ul>
+                            <li>Contributed to developing the Citi Velocity FX application
+                            with C#, and collaborated with QA, UX and server-side team
+                            to deliver requirements.</li>
+                            <li>Created an application called Spotlight using React, to
+                                monitor the engineering excellence levels across all
+                                bitbucket repository levels in Citi.</li>
                         </ul>
                     </div>
                 </div>
@@ -50,13 +64,21 @@
                     <div class="work-experience--mobilesecondtitle">Software Engineer <span class="heading-primary--main1">@ Citi</span></div>
                 </div>
                 <div class="work-experience--details">
-                    <div class="work-experience--timeframe heading-quarternary">Aug 2019 - Present</div>
+                    <div class="work-experience--timeframe heading-quarternary">Aug 2019 - Jul 2020</div>
                     <div class="heading-quarternary">
                         <ul>
-                            <li>Contribute in developing the back end of a high performance LTA eTrading platform with
-                                python</li>
-                            <li>Developed the backtest / regression test for the eTrading pricing platform to ensure
-                                that changes made to the codebase will still price with the expected tick</li>
+                            <li>Contributed to developing a high-performance LTA
+                                Commodities eTrading platform, writing business logic in
+                                python and working closely with traders.</li>
+                            <li>Developed a regression test for the eTrading pricing
+                                platform to ensure that changes made to the codebase will
+                                still price with the expected ticks, and also to help traders
+                                fine tune their prices by running with different parameters
+                                on historical data.</li>
+                            <li>Spearheaded the pilot Citi London Apprenticeship
+                                Programme by working with HR and other business
+                                partners, improving diversity within the organisation, and
+                                mentoring a software developer apprentice.</li>
                         </ul>
                     </div>
                 </div>
@@ -67,10 +89,11 @@
                     <div class="work-experience--mobilesecondtitle"> Intern <span class="heading-primary--main1">@ Sky</span></div>
                 </div>
                 <div class="work-experience--details">
-                    <div class="work-experience--timeframe heading-quarternary">Jul 2019 - Oct 2019</div>
+                    <div class="work-experience--timeframe heading-quarternary">Aug 2017 - Sep 2017</div>
                     <div class="heading-quarternary">
                         <ul>
-                            <li>Contribute to developing an monitoring application using ReactJS</li>
+                            <li>Contributed to developing an app using React that monitors
+                                other application endpoints.</li>
                         </ul>
                     </div>
                 </div>
