Updated side projects section and responsiveness of section experience

--- a/src/app/section-experience/section-experience.component.scss
+++ b/src/app/section-experience/section-experience.component.scss
@@ -184,9 +184,12 @@
                 margin-top: 3rem;
             }
         }
-        padding-left: 8rem; 
-        width: 50%;
 
+        @include respond(tab-port) {
+            padding-left: 0rem;
+            width: 100%;   
+            margin-top: 5rem
+        }
     }
 
     .is-visible {
