--- a/src/app/section-side-projects/section-side-projects.component.html
+++ b/src/app/section-side-projects/section-side-projects.component.html
@@ -1,7 +1,19 @@
 <section class="section-sideprojects">
     <div class="section-heading">
         <h2 class="heading-secondary">
-            <span class='heading-arrow'>&#8594;</span>Side projects
+            <span class='heading-arrow'>&#8594;</span>Side projects 
+            <a href ="https://github.com/serena97" class="github" target="_blank">
+                <img class="github__logo" src="../../assets/github-logo.svg" alt="linkedin - icon made by Dave Gandy"/>
+            </a>
         </h2>
+    </div>
+    <div class="heading-tertiary section__sideprojects--container"> 
+        <div> 
+            <span class="subheading-arrow"> > </span> 
+            <a href="https://github.com/serena97/portfolio" target="_blank"  class="section__sideprojects--text" style="text-decoration: none;">
+                Personal Portfolio [this site] - Angular, TypeScript, Sass, HTML
+            </a>
+        </div>
+        <div>+ More Coming Soon</div>
     </div>
 </section>
